Add undefined behavior checks

--- a/cfg/test.cfg
+++ b/cfg/test.cfg
@@ -1,5 +1,11 @@
--O
+-O1
 -g
+
+-fsanitize=undefined
+-fsanitize=local-bounds
+-fsanitize=implicit-conversion
+-fsanitize=float-divide-by-zero
+-fsanitize=unsigned-integer-overflow
 
 -fsanitize=address
 -fno-omit-frame-pointer
